:fix:added z-index

--- a/style.css
+++ b/style.css
@@ -3,17 +3,22 @@ body{
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
 nav{
+    
     position: fixed;
     top: 0;
     width: 100%;
     height: 100px;
     padding: 10px 90px;
     box-sizing: border-box;
-    background: rgba(0, 0, 0, 0);
+    z-index: 1; /*nimeongeza z index juu image ilikuwa juu ya navbar */
     border-bottom: 1px solid off;
     
 }
+
+
 nav .logo{
     padding: 22px 20px;
     height: 80px;
@@ -43,7 +48,8 @@ nav ul li a{
 }
 nav ul li a:hover{
     
-    background-color: black;
+    
+    color: black;
 }
 section{
     
